--- a/config/training/ecapa_tdnn.yaml
+++ b/config/training/ecapa_tdnn.yaml
@@ -1,4 +1,4 @@
-# Resnet18 yaml training Configs
+# Ecapa-TDNN yaml training Configs
 
 task:
   type: &task_type "VPR"
@@ -14,13 +14,7 @@ dataset:
   chunk_size: 300
   num_classes: &num_classes 10
   
-  feat_type: "fbank"
-  feat_config:
-    num_mel_bins: &feat_dim 64
-    frame_length: 25
-    frame_shift: 10
-    dither: 0.0
-    samplerate: 16000
+  feat_type: "ecapa"
 
   add_noise_proportion: 0.6 # Control noisify augmention ratio
   add_noise_config:
@@ -29,18 +23,14 @@ dataset:
     max_gain_db: 300.0
 
 embedding_model:
-  model: "ResNet"
+  model: "Ecapa_Tdnn"
   config:
-    feats_dim: *feat_dim
-    block_type: "BasicBlock"
-    num_blocks: [2, 2, 2, 2]
-    in_channels: 32
-    embedding_dims: [256]
+    dummy: -1
 
 loss:
   model: "AM-Softmax" 
   config:
-    embedding_dim: 256 
+    embedding_dim: 192 
     num_classes: *num_classes 
     scale_factor: 30.0
     margin: 0.4
