[vad_runtime_impl] - add wav IO, fix cmakes.

--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -9,8 +9,8 @@ project(
 set(CMAKE_CXX_STANDARD 17)
 
 include(CTest)
-include(FetchContent)
 
+include(FetchContent)
 set(FETCHCONTENT_QUIET off)
 set(FETCHCONTENT_BASE_DIR "${CMAKE_SOURCE_DIR}/3rd_party")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
@@ -22,3 +22,5 @@ include(libtorch)
 
 # Delare header include root directory of project
 include_directories(vad_rt)
+
+add_subdirectory(vad_rt)
