[update_inference] - enable onnx export for vad model.

--- a/config/inference/infer.yaml
+++ b/config/inference/infer.yaml
@@ -2,11 +2,14 @@
 
 test_data: "sample_data/vad_eval_data.json"
 result_path: "test_logs/debug"
-
 task_config: "sample_data/model/demo_task/crdnn.yaml"
 chkpt_name: "crdnn.ckpt"
 
 export_quant_model: true
+export_onnx_model:
+  do_export: true
+  chunk_size: 10
+
 post_process: 
   type: "sliding_window" # no_post_process also available
   config:
@@ -21,6 +24,6 @@ post_process:
 #     dummy_conf: -1
 
 trainer:
-  accelerator: "cpu" 
+  accelerator: "gpu" 
   devices: 1 
   strategy: "ddp" 
