--- a/config/inference/infer.yaml
+++ b/config/inference/infer.yaml
@@ -14,8 +14,8 @@ post_process:
   type: "sliding_window" # no_post_process also available
   config:
     window_size: 10
-    thres: 0.7
-    max_len: 100
+    speech_start_thres: 0.5
+    speech_end_thres: 0.9
 
 # --- no_post_process config ---
 # post_process: 
