--- a/config/inference/infer.yaml
+++ b/config/inference/infer.yaml
@@ -3,7 +3,8 @@
 test_data: "sample_data/vad_eval_data.json"
 result_path: "test_logs/debug"
 task_config: "sample_data/model/demo_task/crdnn.yaml"
-chkpt_name: "crdnn.ckpt"
+chkpt_name: null
+chkpt_aver: true
 
 export_quant_model: true
 export_onnx_model:
